@@ -1,6 +1,10 @@
 Knot Resolver 5.4.1 (2021-0m-dd)
 ================================
 
+Improvements
+------------
+- dns64 module: also map the reverse (PTR) subtree (#478, !1201)
+
 Bugfixes
 --------
 - fix build without doh2 support (!1197)
